[gd_scene load_steps=4 format=3 uid="uid://bd8g7yv7wke4x"]

[ext_resource type="Script" uid="uid://ct4cc4ikqg54i" path="res://scenes/main/main_game.gd" id="1_36pl1"]
[ext_resource type="PackedScene" uid="uid://cvc1m66nqm83x" path="res://scenes/title_screen/title_screen.tscn" id="2_bebfr"]
[ext_resource type="PackedScene" uid="uid://xs8r6aue3u88" path="res://scenes/stealth_game/stealth_game.tscn" id="3_esv8v"]

[node name="main_game" type="Node2D"]
script = ExtResource("1_36pl1")

[node name="title_screen" parent="." instance=ExtResource("2_bebfr")]

[node name="stealth_game" parent="." instance=ExtResource("3_esv8v")]
visible = false

[connection signal="start_game_pressed" from="title_screen" to="." method="_on_title_screen_start_game_pressed"]
[connection signal="dive" from="stealth_game" to="." method="_on_stealth_game_dive"]
